# Variable-provider

./: .gitignore  Cargo.toml  Makefile.toml  Readme.md
artifacts/: checksums.txt  checksums_intermediate.txt  variable_manager-aarch64.wasm  variable_manager.wasm
contracts/variable-manager/: Cargo.toml
contracts/variable-manager/src/: contract.rs  execute.rs  query.rs  response.rs  state.rs
contracts/variable-provider/: Cargo.toml
contracts/variable-provider/src/: contract.rs  execute.rs  query.rs  response.rs  state.rs
package/: Cargo.toml
package/src/: lib.rs
test/: Cargo.toml
test/src/: integration_tests.rs  lib.rs  unit_tests.rs
