[workspace]
members             = ["package", "test", "contracts/variable-manager"]

[workspace.package]
version             = "1.0.2"
edition             = "2021"
authors             = ["Rhaki"]
license             = "Apache-2.0"

[workspace.dependencies]
cosmwasm-schema     = "1.5.0"
cosmwasm-std        = "1.5.0"
cw-storage-plus     = "1.2.0"
cw-multi-test       = "0.20.0"
schemars            = "0.8.10"
serde               = { version = "1.0.145", default-features = false, features = ["derive"] }
rhaki-cw-plus       = "0.6.8"
thiserror           = "1.0.31"
variable-manager-pkg = { path = "./package", version="1.0.1" }