[workspace]
members              = ["package", "test", "contracts/variable-manager"]

[workspace.package]
version              = "1.0.4"
edition              = "2021"
authors              = ["Rhaki"]
license              = "Apache-2.0"

[workspace.dependencies]
cosmwasm-schema      = "1"
cosmwasm-std         = "1"
cw-storage-plus      = "1"
schemars             = "0.8"
serde                = { version = "1", default-features = false, features = ["derive"] }
serde_json           = "1"
rhaki-cw-plus        = "2"
thiserror            = "1"
variable-manager     = { path = "./contracts/variable-manager", version="1" }
variable-manager-pkg = { path = "./package", version="1" }
