[package]
name                = "variable-manager-pkg"
description         = "variable manager package"
license             = { workspace = true }
version             = { workspace = true }
authors             = { workspace = true }
edition             = { workspace = true }

[dependencies]
cosmwasm-schema     = { workspace = true }
cosmwasm-std        = { workspace = true }
cw-storage-plus     = { workspace = true }
schemars            = { workspace = true }
serde               = { workspace = true }
rhaki-cw-plus       = { workspace = true }



