[package]
name                = "variable-provider-test"
description         = "variable provider test"
license             = { workspace = true }
version             = { workspace = true }
authors             = { workspace = true }
edition             = { workspace = true }

[dependencies]
cosmwasm-schema     = { workspace = true }
cosmwasm-std        = { workspace = true }
cw-storage-plus     = { workspace = true }
schemars            = { workspace = true }
serde               = { workspace = true }
serde_json          = "1.0.108"
rhaki-cw-plus       = { workspace = true }
variable-provider-pkg = { workspace = true }



