[package]
name             = "variable-manager"
description      = "variable manager smart contract"
license          = { workspace = true }
version          = { workspace = true }
authors          = { workspace = true }
edition          = { workspace = true }
exclude          = ["contract.wasm", "hash.txt"]

[lib]
crate-type       = ["cdylib", "rlib"]

[features]
backtraces       = ["cosmwasm-std/backtraces"]
library          = []

[dependencies]
cosmwasm-schema       = { workspace = true }
cosmwasm-std          = { workspace = true }
cw-storage-plus       = { workspace = true }
schemars              = { workspace = true }
rhaki-cw-plus         = { workspace = true }
thiserror             = { workspace = true }
variable-manager-pkg  = { workspace = true }
